syntax = "proto3";

package wres.messages.generated;

message job
{
    string project_config = 4;

    enum Verb
    {
        EXECUTE = 0;
        INGEST = 1;
        CONNECTTODB = 2;
        REFRESHDATABASE = 3;
        CLEANDATABASE = 4;
        VALIDATE = 5;
        ROTATEPARTITIONS = 6;
        SWITCHDATABASE = 7;
        MIGRATEDATABASE = 8;
    }

    Verb verb = 5;

    repeated string additional_arguments = 6;
    
    string database_name = 7;

    string database_host = 8;

    string database_port = 9;
}
